test/functions/operatorOverloads/operatorMethods/genericsInstantiationBad.good
genericsInstantiationBad.chpl:14: In function 'main':
genericsInstantiationBad.chpl:17: error: unresolved call '==(Foo(int(64)), Foo(real(64)))'
genericsInstantiationBad.chpl:1: note: this candidate did not match: ==(_arg1: Foo, _arg2: Foo)
genericsInstantiationBad.chpl:1: note: because where clause evaluated to false
genericsInstantiationBad.chpl:5: note: candidates are: ==(const ref lhs: Foo(?t), const ref rhs: Foo(t))
$CHPL_HOME/modules/internal/CString.chpl:42: note:                 ==(s0: c_string, s1: c_string)
note: and 89 other candidates, use --print-all-candidates to see them
